--- a/services/Inventory/src/InventoryService.Domain.Shared/Localization/InventoryService/en.json
+++ b/services/Inventory/src/InventoryService.Domain.Shared/Localization/InventoryService/en.json
@@ -1,9 +1,18 @@
 {
-  "Culture": "en",
-  "Texts": {
-    "AppName": "InventoryService",
-    "Menu:Home": "Home",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information visit",
-    "Welcome": "Welcome"
-  }
+    "Culture": "en",
+    "Texts": {
+        "AppName": "InventoryService",
+        "Menu:Home": "Home",
+        "Menu:Products": "Products",
+        "NewProduct": "New Product",
+        "Actions": "Actions",
+        "Edit": "Edit",
+        "Delete": "Delete",
+        "Name": "Name",
+        "Quantity": "Quantity",
+        "Close": "Close",
+        "Save": "Save",
+        "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information visit",
+        "Welcome": "Welcome"
+    }
 }
